# biblio

./: .dockerignore  .gitignore  COOKIE_FEATURE_COMPLETE.md  Cargo.toml  Dockerfile  Dockerfile-Synology  MIT-License.txt  README.Docker.md  README.md  REFRESH_BUTTON_FIX.md  compose.yaml  compose.yaml.example  config.yaml.example  docker-compose.yml.example  users.ids  users.ids.example
doc/: ADMIN_FEATURES.md  APP_IN_DOCKER_IMPLEMENTATION.md  AUTHENTICATION.md  CONFIGURATION_SYSTEM_FINAL_REPORT.md  COOKIE_FEATURE_COMPLETE.md  COOKIE_IMPLEMENTATION.md  COOKIE_TESTING.md  DOCKER_CONFIG_GUIDE.md  DOCUMENTATION_UPDATES.md  EXAMPLE_SETUP.md  FRONTEND_AUTHENTICATION.md  IMPLEMENTATION.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  SESSION_PERSISTENCE_FINAL_REPORT.md  SESSION_PERSISTENCE_START_HERE.md  SESSION_PERSISTENCE_SUMMARY.md
public/: admin.html  app.js  index.html  profile.html
src/: api.rs  audit.rs  auth.rs  config.rs  config.rs.example  db.rs  library.rs  main.rs  rbac.rs  session.rs
