[package]
name = "biblio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-identity = "0.9.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
walkdir = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
rustls = "0.20"
rustls-pemfile = "1.0"
actix-web-httpauth = "0.8"